syntax = "proto3";

option csharp_namespace = "ECommerce.Product.Grpc";

package product;

// Product gRPC Service
service ProductGrpcService {
  rpc GetProductInfo (ProductInfoRequest) returns (ProductInfoResponse);
  rpc GetProductsBatch (ProductsBatchRequest) returns (ProductsBatchResponse);
  rpc CheckStock (StockCheckRequest) returns (StockCheckResponse);
  rpc ValidateProducts (ValidateProductsRequest) returns (ValidateProductsResponse);
}

// Messages
message ProductInfoRequest {
  string product_id = 1;
}

message ProductInfoResponse {
  string id = 1;
  string name = 2;
  string sku = 3;
  double price = 4;
  int32 stock_quantity = 5;
  bool is_available = 6;
  string image_url = 7;
  string currency = 8;
}

message ProductsBatchRequest {
  repeated string product_ids = 1;
}

message ProductsBatchResponse {
  repeated ProductInfoResponse products = 1;
}

message StockCheckRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message StockCheckResponse {
  bool available = 1;
  int32 stock_quantity = 2;
  string message = 3;
}

message ValidateProductsRequest {
  repeated ProductValidationItem items = 1;
}

message ProductValidationItem {
  string product_id = 1;
  int32 quantity = 2;
}

message ValidateProductsResponse {
  bool all_valid = 1;
  repeated ProductValidationResult results = 2;
}

message ProductValidationResult {
  string product_id = 1;
  bool valid = 2;
  string message = 3;
  int32 available_quantity = 4;
}
